styles/style.css
/* RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* TIPOGRAFÍAS */
@import url('https://fonts.googleapis.com/css2?family=BioRhyme:wght@200..800&family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');

html {
    font-size: 62.5%;
}

/* BASE */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: #F2F5F6;
    font-family: "Bricolage Grotesque", sans-serif;
}

/* TIPOGRAFÍA GENERAL */
h1, h2, h3 {
    font-family: "BioRhyme", serif;
}

h1 { font-size: 5rem; }
h2 { font-size: 3rem; }
h3 { font-size: 2rem; }

p {
    font-size: 1.5rem;
    font-weight: 500;
}

/* LINKS */
a {
    text-decoration: none;
}

/*      LAYOUT GENERAL      */

.main-container {
    flex: 1;
    max-width: 1200px;
    margin: 0 auto;
    padding: 2rem;
}

/*      HEADER      */

header {
    background-color: #49111C;
    color: #F2F5F6;
    height: 2rem 0;
}

.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
}

.nav {
    display: flex;
    gap: 2rem;
    font-size: 1.5rem;
}

.nav a{
    color: #F2F5F6;
    text-decoration: none;
    position: relative;
    transition: all 0.5s ease-in-out;
    animation-duration: 0.9s;
}

.nav a:hover{
    animation-name: pulse79;
    animation-iteration-count: infinite;
}

@keyframes pulse79{
    0% {    transform: scale(1);    }
    50%{    transform: scale(1.07); }
    100%{   transform: scale(1);    }
}

/*      FOOTER       */

footer {
    background-color: #49111C;
    color: #F2F5F6;
    text-align: center;
    padding: 1.5rem;

    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.main-footer {
    border-top: 1px solid #F2F5F6;
}

/*      HERO         */

.section-hero {
    background-image: url(../img/fondo-index.png);
    background-size: cover;
    background-position: center;

    min-height: 60vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;

    padding: 6rem 4rem;
    color: #F2F5F6;
}

/*      SECCION GEN     */

.section {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    margin-bottom: 3rem;
}

/*   CARDS  */

.card {
    background-color: #49111C;
    color: #F2F5F6;
    padding: 2.5rem;
    border-radius: 12px;

    display: flex;
    flex-direction: column;
    gap: 1rem;

    margin-bottom: 2rem;
    flex: 1 1 250px;
}

.card img {
    width: 100%;
    height: auto;
    border-radius: 8px;
}

/*   BOTONES    */

.buttons {
    display: flex;
    gap: 1.5rem;
    margin-top: 1.4rem;
}

.btn,
.btn-secondary {
    padding: 1rem 2rem;
    border-radius: 10px;
    display: inline-block;
}

.btn {
    background-color: #49111C;
    color: #F2F5F6;
}

.btn-secondary {
    background-color: #49111C;
    border: 1px solid #49111C;
    color: #F2F5F6;
}

/*      MÓDULO 4        */


/*      INDEX           */

.page-index{
    display: grid;
    grid-template-areas: 
    "hero" 
    "info";
    gap: 2rem;
}

.section-hero{
    grid-area: hero;
}

.page-index .section{
    grid-area: info;
}


/*   SOBRE MI    */
.page-sobremi {
    display: flex;
    flex-direction: column;
    gap: 3rem;
}


/*   EDUCACIÓN   */
.page-educacion {
    display: flex;
    flex-direction: column;
    gap: 3rem;
}


/*   PROYECTOS   */
.page-proyectos {
    display: flex;
    flex-direction: column;
    gap: 3rem;
}

.section, .proyectos{
    display: flex;
    flex-direction: column;
    gap: 2rem;
    margin-bottom: 2rem;
}

.proyectos .container {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
}


/*   CONTACTO   */
.page-contacto {
    display: grid;
    grid-template-areas:
    "branding"
    "social"
    "contact";
    gap: 2rem;
}


.page-contacto .container{
    max-width: 800px;
    width: 100%;
    text-align: left;
}

.page-contacto h1{
    font-size: 3.5rem;
    margin-bottom: 0.5rem;
}

.page-contacto h2{
    font-size: 2rem;
    margin-bottom: 1rem;
}

.page-contacto section{
    background-color: #F2F5F6;
    padding: 2rem;
    border-radius: 12px;
    width: 100%;
}

.page-contacto a{
    color: #49111C;
    font-weight: 600;
}

.page-contacto h3{
    margin-top: 1rem;
    font-size: 1.6rem;
}

/*      MEDIA QUERIES: INDEX Y CONTACTO       */

/*      TABLET              */

@media (min-width:768px){
    .page-index{
        grid-template-areas: 
        "hero" 
        "info";
        gap: 2rem;
    }
    .page-contacto{
        grid-template-areas: 
        "branding social" 
        "contact contact";
        grid-template-columns: 1fr 1fr;
    }
}

/*      ESCRITORIO      */
@media (min-width:1024px){
    .page-index{
        grid-template-areas: 
        "hero info";
        grid-template-columns: 2fr 1fr;
    }
    .page-contacto{
        grid-template-areas: 
        "branding social" 
        "contact social";
        grid-template-columns: 2fr 1fr;
    }
}

/*      BOOTSTRAP*/

#carouselEducacion img{
    height: 220px;
    width: auto;
    object-fit: contain;
    margin: 0 auto;
}

.carousel-control-prev,
.carousel-control-next {
    width: 45px;
    height: 45px;
    background-color: #49111C;
    border-radius: 50%;
    top: 50%;
    transform: translateY(-50%);
}

/* ---------- NAVBAR BOOTSTRAP ---------- */

.navbar {
    background-color: #49111C;
    padding: 2rem 0;
}


.navbar-brand {
    color: #F2F5F6 !important;
    font-family: "BioRhyme", serif;
    font-size: 2.5rem;
    line-height: 1.2;
}

.navbar-brand small {
    display: block;
    font-size: 1.3rem;
    color: #F2F5F6;
    font-family: "Bricolage Grotesque", sans-serif;
}

.navbar-brand:hover {
    color: #F2F5F6 !important;
}

.navbar-nav .nav-link {
    color: #F2F5F6 !important;
    font-size: 1.5rem;
    margin-left: 1rem;
}

.navbar-nav .nav-link.active {
    font-weight: bold;
}

.navbar-toggler {
    border-color: #F2F5F6;
}

.navbar-toggler-icon {
    filter: invert(1);
} 

